spectec/test/elab/neg/parse-variant-bar-no-cases.spectec
;; Variant type body with a leading bar but no cases.

syntax foo = |
